Changes over Changes

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,9 @@
+<p>&nbsp;</p>
 </div>
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>Made with ❤️ by The App Brewery</p>
+    <p>Made with <a href="/compose">❤️</a> by The App Brewery</p>
   </div>
-<!-- </div> -->
+
 </body>
 </html>
