--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,3 +1,4 @@
 <%- include('partials/header'); -%>
-   
+   <h1><%= siteTitle %></h1>
+   <p><%- siteText -%></p>
 <%- include('partials/footer'); -%>
