--- a/views/site.ejs
+++ b/views/site.ejs
@@ -2,7 +2,7 @@
    <h1><%= siteTitle %></h1>
    <% if (siteTitle !== 'Compose') { %>
       <p><%= siteText %></p>
-      <% if (posts.length) { %>
+      <% if (posts.length && siteTitle === 'Home') { %>
          <div class="container">
             <% for (i=0; i<posts.length; i++) { %>
                <h3><%= posts[i].postHeadline %></h3>
