--- a/views/site.ejs
+++ b/views/site.ejs
@@ -4,13 +4,13 @@
       <p><%= siteText %></p>
       <% if (posts.length && siteTitle === 'Home') { %>
          <div class="container">
-            <% for (i=0; i<posts.length; i++) { %>
-               <h3><%= posts[i].postHeadline %></h3>
+            <%  posts.forEach((post) => { %>
+               <h3><%= post.postHeadline %></h3>
                <p>
-                  <%= posts[i].postExcerpt %>[...]
-                  <a href="<%- posts[i].postLink -%>">Read More</a>
+                  <%= post.postExcerpt %>[...]
+                  <a href="<%- post.postLink -%>">Read More</a>
                </p>
-            <% } %>
+            <% }) %>
          </div>
       <% } %>
    
