--- a/views/site.ejs
+++ b/views/site.ejs
@@ -18,7 +18,9 @@
       <form action="/" name="composeForm" class="form-signin" method="post">
          <p><input class="form-control" type="text" name="postHeadline" placeholder="Post Headline"></p>
          <p><textarea class="form-control" name="postText" id="postText" placeholder="Post Text" rows="10"></textarea></p>
-         <p><button class="btn btn-primary" type="submit" name="submitButton" value="<%= siteTitle %>">Publish</button></p>
+         <p>
+            <input class="form-check" type="checkbox" name="siteOrPost">
+            <button class="btn btn-primary" type="submit" name="submitButton" value="<%= siteTitle %>">Publish</button></p>
       </form>
    <% } %>
 <%- include('partials/footer'); -%>
